--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="md:w-1/2 flex justify-center" data-aos="fade-left">
                     <div class="relative">
-                        <img src="http://static.photos/technology/640x360/10" alt="Profile" class="rounded-full w-64 h-64 md:w-80 md:h-80 object-cover border-4 border-white shadow-xl">
+                        <img src="profile.jpg" alt="Profile" class="rounded-full w-64 h-64 md:w-80 md:h-80 object-cover border-4 border-white shadow-xl">
                         <div class="absolute -bottom-2 -right-2 bg-blue-500 rounded-full p-3 shadow-lg">
                             <i data-feather="code" class="text-white w-6 h-6"></i>
                         </div>
