--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="https://unpkg.com/feather-icons"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
     <style>
+        html, body {
+            overflow-x: hidden;
+        }
         .hero-bg {
             background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
         }
