--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                     <div class="bg-white p-8 rounded-xl shadow-md h-full">
                         <h3 class="text-2xl font-semibold mb-6">Let's Work Together</h3>
                         <p class="text-gray-600 mb-6">I'm excited to hear about potential opportunities where I can contribute my skills and continue learning. Whether you have a project in mind or just want to connect, I'd love to hear from you!</p>
-                        <div class="flex items-center">
+                        <div class="flex items-center mb-6">
                             <div class="bg-blue-100 p-3 rounded-full mr-4">
                                 <i data-feather="clock" class="text-blue-500 w-5 h-5"></i>
                             </div>
@@ -352,13 +352,13 @@
                                 <h4 class="font-medium text-gray-900">Availability</h4>
                                 <p class="text-gray-600">Currently available for internship opportunities starting September 2025</p>
                             </div>
-                            <div class="mb-6">
-                                <a href="https://drive.google.com/file/d/1ZenMAE3-VaM1pFk8v-ilopDl_3XICrVI/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="inline-flex items-center bg-blue-500 hover:bg-blue-600 text-white font-medium py-3 px-6 rounded-lg transition-colors duration-200 shadow-md hover:shadow-lg">
-                                    <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
-                                    </svg> Download My CV
-                                </a>
-                            </div>
+                        </div>
+                        <div class="mb-6">
+                            <a href="https://drive.google.com/file/d/1ZenMAE3-VaM1pFk8v-ilopDl_3XICrVI/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="inline-flex items-center bg-blue-500 hover:bg-blue-600 text-white font-medium py-3 px-6 rounded-lg transition-colors duration-200 shadow-md hover:shadow-lg">
+                                <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
+                                </svg> Download My CV
+                            </a>
                         </div>
                     </div>
                 </div>
