Add ML-Powered Network Intrusion Detection System project and improve projects layout

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 <i data-feather="book" class="text-blue-500"></i>
                             </div>
                             <div>
-                                <h4 class="font-semibold">3 Projects</h4>
+                                <h4 class="font-semibold">4 Projects</h4>
                                 <p class="text-sm text-gray-500">Completed</p>
                             </div>
                         </div>
@@ -172,8 +172,8 @@
             </div>
             
             <!-- Projects Grid - Centered Layout -->
-            <div class="max-w-7xl mx-auto">
-                <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8 justify-items-center">      
+            <div class="max-w-6xl mx-auto">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 justify-items-center place-items-center">      
                     <!-- Project 1 -->
                     <div class="project-card bg-white rounded-xl shadow-md overflow-hidden transition duration-300 w-full max-w-sm" data-aos="fade-up" data-aos-delay="100">
                         <div class="overflow-hidden">
@@ -235,6 +235,29 @@
                                 <span class="bg-gray-100 text-gray-800 text-xs px-3 py-1 rounded-full">JavaScript</span>
                                 <span class="bg-gray-100 text-gray-800 text-xs px-3 py-1 rounded-full">PHP</span>
                                 <span class="bg-gray-100 text-gray-800 text-xs px-3 py-1 rounded-full">MySQL</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Project 4 -->
+                    <div class="project-card bg-white rounded-xl shadow-md overflow-hidden transition duration-300 w-full max-w-sm" data-aos="fade-up" data-aos-delay="400">
+                        <div class="overflow-hidden">
+                            <img src="http://static.photos/technology/640x360/24" alt="Network Security" class="w-full h-48 object-cover transition duration-500">
+                        </div>
+                        <div class="p-6">
+                            <div class="flex justify-between items-start mb-2">
+                                <h3 class="text-xl font-semibold">ML-Powered Network Intrusion Detection System</h3>
+                                <a href="https://github.com/rusiru1231/Network-Traffic-Analyzer-with-Intrusion-Detection" class="text-blue-500 hover:text-blue-700">
+                                    <i data-feather="external-link" class="w-5 h-5"></i>
+                                </a>
+                            </div>
+                            <p class="text-gray-600 mb-4">A real-time network traffic analyzer with machine learning-powered intrusion detection capabilities, achieving 92% precision using the CICIDS 2017 dataset. Features live monitoring and interactive dashboard.</p>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="bg-gray-100 text-gray-800 text-xs px-3 py-1 rounded-full">Python</span>
+                                <span class="bg-gray-100 text-gray-800 text-xs px-3 py-1 rounded-full">TensorFlow</span>
+                                <span class="bg-gray-100 text-gray-800 text-xs px-3 py-1 rounded-full">Scapy</span>
+                                <span class="bg-gray-100 text-gray-800 text-xs px-3 py-1 rounded-full">Streamlit</span>
+                                <span class="bg-gray-100 text-gray-800 text-xs px-3 py-1 rounded-full">ML</span>
                             </div>
                         </div>
                     </div>
